[package]
name = "ctx-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"

hyper-util = { version = "0.1.5", features = ["tokio"] }
hyper = { version = "1.3.1", features = ["http1", "http2", "server", "client"] }
http-body-util = "0.1.2"
futures-lite = "2.3.0"

serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.14"

tokio-native-tls = "0.3.1"
native-tls = { version = "*", features = ["alpn"] }

handlebars = "5.1.2"

async-recursion = "1.1.1"
flume = "0.11.0"

dirs = "5.0.1"


tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }
tracing-subscriber = "0.3.0"
color-print = "0.3.6"
tinytemplate = "1.2.1"

[dependencies.tokio]
version = "1.38.0"
features = [
    "io-std",
    "macros",
    "net",
    "rt",
    "process",
    "fs"
]
